Add all articles endpoint
